# bandit-markdown

./: README.md  pyproject.toml
bandit_markdown/: main.py
examples/: TESTREADME.md  TESTREADME2.md
tests/: test_bandit_markdown.py
